# maestria

./: .dockerignore  .gitignore  Dockerfile  README-DEPLOY.md  README.md  database.py  docker-compose.yml  gunicorn_config.py  indice_prioridad.py  indice_prioridad_coke.py  materias_primas.md  materias_primas.py  pyproject.toml  run.py
.wenv/: pyvenv.cfg
.wenv/Scripts/: activate  activate.bat
app/: __init__.py  config.py
app/api/: routes.py
app/main/: routes.py
app/services/: api_service.py
app/static/css/: styles.css
app/templates/: PlanificacionProduccion.html  existencias_articulo.html  indice1.html  indice1_sin_orden.html
app/utils/: data_service.py
archivo/: indice_prioridad10marzo25.py  materia_prima.py
tema2/: algoritmo_genetico_fx.py  algoritmo_genetico_rutas.py  algoritmo_genetico_rutasw.py  almacen_inteligente.py  aprendizaje_supervisado.py  arbol_ambiente.py  arbol_compras.py  arbol_optometria.py  busca_caminos.py  calefactor.py  json_ventas.json  kmeans.py  perceptron.py  prediccion_ventas.py  priori_compras.py  red_neuronal_simbolos.py  sales_forecast.html
